# rust-xp-ratatui-table

./: Cargo.toml  README.md
src/: app.rs  main.rs  style.rs  ui.rs
src/container_app/: app.rs  ui.rs
src/pod_app/: app.rs  ui.rs
src/rs_app/: app.rs  ui.rs
src/tui/: data.rs  mod.rs  table_ui.rs
src/tui/container_app/: app.rs  ui.rs
src/tui/pod_app/: app.rs  ui.rs
src/tui/rs_app/: app.rs  ui.rs
tests/: test_fakeit.rs
