[package]
name = "rust-xp-tui-table"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.0-alpha.2"
crossterm = "0.27"
clap = { version = "4", features = ["cargo"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
itertools = "0.12"
unicode-width = "0.1"
#palette = "0.7.3"
fakeit = "1.1"

[dev-dependencies]
anyhow = "1"
